# dotest

./: .gitignore  Cargo.toml  README.md
smoke/multi/MultiTestsA/: UnitTest1.cs
smoke/multi/MultiTestsB/: UnitTest1.cs
smoke/root-app-tests/AppCore/: Class1.cs
smoke/root-app-tests/tests/AppCore.Tests/: UnitTest1.cs
smoke/single/SingleTests/: UnitTest1.cs
src/: main.rs
src/commands/: count.rs  mod.rs  ui.rs
src/commands/ui/: config.rs  discovery_cache.rs  failed_tests.rs  failure_summary.rs  filter.rs  interactive.rs  layout.rs  manual_watch.rs  mod.rs  output.rs  presets.rs  test_run.rs
src/core/: config.rs  count.rs  executor.rs  mod.rs  tree.rs
src/tests/: executor.rs
