[package]
name = "dotest"
version = "0.1.4"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
directories = "5.0"
anyhow = "1.0"
ratatui = "0.26"
crossterm = "0.27"
serde_yaml = "0.9.34"
