[package]
name = "dotest"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
directories = "5.0"
anyhow = "1.0"
ratatui = { version = "0.26", features = ["unstable-rendered-line-info"] }
crossterm = "0.27"
serde_yaml = "0.9.34"
arboard = "3"
notify = "6.1"
sha2 = "0.10"
